# spectra-graph

./: README.md  pyproject.toml
.github/: pull_request_template.md
docs/: INSTALL.md  PACKAGING.md  PLAN.md
docs/assets/logo/: logo.psd
graph_library/: README.md  mobile_patent_suits.json
scripts/: spectra-lib.sh
spectra_graph/: spectra.py
