[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spectra-graph"
version = "0.0.3"
authors = [
    { name="Adrian Davila", email="akdavila03@gmail.com" },
]
description = "Package to place and route graphs on an infinite plane"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    'Intended Audience :: Developers',
]

dependencies = []

[project.optional-dependencies]
dev = [
  "black==23.12.0",
  "icecream==2.1.3",
  "isort==5.13.1",
  "pyright==1.1.343",
  "pytest==7.4.3"
]

[project.urls]
Homepage = "https://github.com/adriandavila/spectra-graph"

[tool.hatch.build.targets.wheel]
packages = ["spectra_graph"]

[tool.isort]
profile = "black"

[tool.pyright]
pythonVersion = "3.10"
include = [
  "spectra_graph/"
]
